manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: server-app
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          failureThreshold: 1
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          failureThreshold: 30
          periodSeconds: 10
